# finance-dates

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/finance_dates/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/src/: API.doctree  CALENDARS.doctree
.github/workflows/: build.yaml  calendar-drift.yaml  copier.yaml
_modules/: finance_dates.html  index.html
_modules/finance_dates/: periods.html
_sources/: README.md.txt  index.md.txt
_sources/.github/ISSUE_TEMPLATE/: bug_report.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/finance_dates/: index.rst.txt
_sources/autoapi/test_all/: index.rst.txt
_sources/docs/src/: API.md.txt  CALENDARS.md.txt
autoapi/: index.html
autoapi/finance_dates/: index.html
autoapi/test_all/: index.html
docs/src/: API.html  CALENDARS.html  CALENDARS.md
finance_dates/: __init__.py  _namespace.py  periods.py
finance_dates/tests/: test_all.py  test_docs.py  test_periods.py  test_polars_namespace.py  test_reference_calendars.py
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
rust/src/: calendar.rs  holiday.rs  lib.rs  lunar.rs  range.rs  trading_hours.rs
scripts/: check_calendar_drift.py
