[package]
name = "finance_dates_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "finance_dates"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance_dates = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
