[package]
name = "finance_dates_py"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "finance_dates"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance-dates = { path = "./rust", version = "*" }
pyo3 = { version = "0.29.0", features = ["abi3", "abi3-py310", "extension-module", "multiple-pymethods"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
panic = 'abort'
lto = true
