[package]
name = "finance_dates"
version = "0.1.0"
authors = ["PrettyGoodCapital <prettygoodcapital@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/prettygoodcapital/finance-dates"
description = "Fast date ranges, holiday calendars, and trading hours for financial markets"

[lib]
name = "finance_dates"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.10", default-features = false }
once_cell = "1"

[profile.test.junit]
path = "junit.xml"
